Updated package descriptions

--- a/clyde_control/package.xml
+++ b/clyde_control/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>clyde_control</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="peter.lacaze.2019@uni.strath.ac.uk">ros</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Package for body motion planning and gait generation</description>
+  <maintainer email="peter.lacaze.2019@uni.strath.ac.uk">GroupC</maintainer>
+  <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
