--- a/clyde_msgs/package.xml
+++ b/clyde_msgs/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>clyde_msgs</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="peter.lacaze.2019@uni.strath.ac.uk">ros</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Package detailing all messages defined within the system</description>
+  <maintainer email="peter.lacaze.2019@uni.strath.ac.uk">GroupC</maintainer>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
