--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -219,7 +219,7 @@
             "label": "install dependencies",
             "detail": "Install all dependencies specified in the workspaces package.xml files.",
             "type": "shell",
-            "command": "sudo apt-get update && rosdep update && rosdep install --from-paths src --ignore-src -y",
+            "command": "sudo apt-get update && rosdep update && rosdep install --ignore-src -y",
             "problemMatcher": []
         },
         {
