--- a/clyde_driver/package.xml
+++ b/clyde_driver/package.xml
@@ -3,16 +3,16 @@
 <package format="3">
   <name>clyde_driver</name>
   <version>0.0.0</version>
-  <description>Code needed to communicate with Bittle's serial interface</description>
+  <description>Package holding all resource required for communicating with and on the bittle</description>
   <maintainer email="peter.lacaze.2019@uni.strath.ac.uk">GroupC</maintainer>
   <license>Apache-2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
