modified submodule file layout

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "serial"]
-	path = serial
+[submodule "submodules/serial"]
+	path = submodules/serial
 	url = https://github.com/wjwwood/serial.git
 	branch = ros2
