Finished implementing linters

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
         "deque",
         "devcontainer",
         "ints",
+        "kbalance",
         "noqa",
         "Petoi",
         "pytest",
