--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -212,7 +212,7 @@
             "label": "update workspace file",
             "detail": "Use vcs to update repositories in src to workspace file.",
             "type": "shell",
-            "command": "vcs export **/src > submodules/ros2.repos",
+            "command": "vcs export src > submodules/ros2.repos",
             "problemMatcher": []
         },
         {
