description implementation with urdf and launch scripts

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM althack/ros2:humble-gazebo
+FROM althack/ros2:humble-cuda-gazebo-nvidia
 
 # ** [Optional] Uncomment this section to install additional packages. **
 
