--- a/src/clyde_description/package.xml
+++ b/src/clyde_description/package.xml
@@ -23,6 +23,7 @@
   <exec_depend>launch_ros</exec_depend>
   <exec_depend>nav2_common</exec_depend>
   <exec_depend>slam_toolbox</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
