minor simulation changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,10 +60,14 @@
         "rosdistro",
         "rosidl",
         "RTPS",
+        "rviz",
+        "rvizconfig",
         "teleop",
         "uncrustify",
+        "urdf",
         "Wextra",
         "Wpedantic",
+        "xacro",
         "xmllint"
     ],
     "cSpell.allowCompoundWords": true,
