Fixed flake8 errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,8 @@
         "DCMAKE",
         "deque",
         "devcontainer",
+        "gzclient",
+        "gzserver",
         "ints",
         "kbalance",
         "noqa",
