--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,3 +15,6 @@ ENV DEBIAN_FRONTEND=dialog
 # Set up auto-source of workspace for ros user
 ARG WORKSPACE
 RUN echo "if [ -f ${WORKSPACE}/install/setup.bash ]; then source ${WORKSPACE}/install/setup.bash; fi" >> /home/ros/.bashrc
+
+# auto-source Gazebo
+RUN echo "source /usr/share/gazebo/setup.bash" >> /home/ros/.bashrc
