adding dependencies to clyde_nav

--- a/src/clyde_nav/CMakeLists.txt
+++ b/src/clyde_nav/CMakeLists.txt
@@ -10,6 +10,9 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(nav2_common REQUIRED)
+find_package(navigation2 REQUIRED)
+find_package(nav2_bringup REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
