--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -139,7 +139,7 @@
             "type": "ament",
             "task": "flake8",
             "path": "src/",
-            "commandOptions": "--config src/.flake8",
+            "commandOptions": "--config .flake8",
             "problemMatcher": "$ament_flake8",
             "presentation": {
                 "panel": "dedicated",
