--- a/src/clyde_description/src/maps/test-realm1.yaml
+++ b/src/clyde_description/src/maps/test-realm1.yaml
@@ -1,7 +1,7 @@
-free_thresh: 0.90
+free_thresh: 0.196
 negate: 0
 origin: [-1.500000, -1.500000, 0.0]
 resolution: 0.010000
 mode: trinary
-occupied_thresh: 0.95
-image: /workspaces/clyderos2/install/share/clyde_description/src/maps/map.pgm
+occupied_thresh: 0.65
+image: test-realm1.png
