--- a/src/clyde_nav/config/nav2_params.yaml
+++ b/src/clyde_nav/config/nav2_params.yaml
@@ -24,7 +24,7 @@ amcl:
     recovery_alpha_fast: 0.0
     recovery_alpha_slow: 0.0
     resample_interval: 1
-    robot_model_type: "differential"
+    robot_model_type: "nav2_amcl::DifferentialMotionModel"
     save_pose_rate: 0.5
     sigma_hit: 0.2
     tf_broadcast: true
@@ -51,14 +51,31 @@ slam_toolbox:
 
 bt_navigator:
   ros__parameters:
-    use_sim_time: true
+    global_frame: map
+    robot_base_frame: base_link
+    odom_topic: /odom
+    default_server_timeout: 20
+    wait_for_service_timeout: 1000
+    action_server_result_timeout: 900.0
     bt_loop_duration: 10
-    default_nav_to_pose_bt_xml: "navigate_w_replanning_and_recovery.xml"
+    navigators: ["navigate_to_pose", "navigate_through_poses", "follow_point"]
+    navigate_to_pose:
+      plugin: "nav2_bt_navigator/NavigateToPoseNavigator"
+    navigate_through_poses:
+      plugin: "nav2_bt_navigator/NavigateThroughPosesNavigator"
+    error_code_names:
+      - compute_path_error_code
+      - follow_path_error_code
 
 controller_server:
   ros__parameters:
     use_sim_time: true
     controller_frequency: 20.0
+    general_goal_checker:
+      stateful: True
+      plugin: "nav2_controller::SimpleGoalChecker"
+      xy_goal_tolerance: 0.25
+      yaw_goal_tolerance: 0.25
     FollowPath:
       plugin: "nav2_regulated_pure_pursuit_controller/RegulatedPurePursuitController"
       desired_linear_vel: 0.5
