--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,6 +9,9 @@ RUN apt-get update \
    && apt-get clean -y \
    && rm -rf /var/lib/apt/lists/*
 
+# Necessary Python packages
+COPY requirements.txt .
+RUN pip3 install -r requirements.txt
 
 # Linter configuration settings
 # ARG WORKSPACE
@@ -20,7 +23,7 @@ COPY ${WORKSPACE}/ament_flake8.ini /opt/ros/humble/lib/python3.10/site-packages/
 # Set up the initial script
 COPY ${WORKSPACE}/initial-params.sh /initial-params.sh
 
-# Changing script permissions and running
+# Changing initial script permissions and running
 RUN chmod +x /initial-params.sh
 RUN /initial-params.sh
 
