--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,9 +54,11 @@
         "kbalance",
         "noqa",
         "Petoi",
+        "pvporcupine",
         "pytest",
         "rclcpp",
         "rclpy",
+        "recognised",
         "repos",
         "rosdep",
         "rosdistro",
@@ -66,6 +68,7 @@
         "rvizconfig",
         "teleop",
         "uncrustify",
+        "unrecognised",
         "urdf",
         "Wextra",
         "Wpedantic",
