Small fix to audio file path

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
         "noqa",
         "Petoi",
         "pvporcupine",
+        "pvrecorder",
         "pytest",
         "rclcpp",
         "rclpy",
