--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
         "devcontainer",
         "gzclient",
         "gzserver",
+        "imgmsg",
         "imshow",
         "ints",
         "kbalance",
